# kute-clip

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: base.js  package-mac.js  package-win.js  version.js
src/: App.tsx  app.module.scss  main.tsx  styles.css  theme.module.scss  utils.ts
src-core/: Cargo.toml
src-core/src/: lib.rs  misty.rs  result.rs  shell.rs  utils.rs
src-core/src/actions/: application.rs  clipboard_changed.rs  keyboard.rs  mod.rs  preference.rs
src-core/src/app_setup/: clipboard_listener_loop.rs  handle_window_events.rs  mod.rs  shortcut_toggle_window.rs
src-core/src/libs/: common.rs  mod.rs  repository.rs
src-core/src/models/: application.rs  clipboard.rs  mod.rs  preference.rs
src-core/src/repositories/: mod.rs
src-core/src/repositories/schema/: v1.sql
src-core/src/views/: clipboard.rs  mod.rs  preference.rs  root.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  misty.rs  shell.rs  tray.rs
src-tauri/src/service_impls/: clipboard.rs  mod.rs
src-tauri/src/service_impls/common/: defs.rs  mod.rs  other.rs
src-tauri/src/service_impls/common/mac/: keycode.rs  mod.rs
src-tests/: Cargo.toml
src-tests/src/: lib.rs
src-tests/tests/: core.rs  history.rs  visibility.rs
src/assets/: setting.svg.tsx
src/core/: bridge.service.ts  keyboard.service.ts  resource.service.ts  router.service.ts  type.ts  view.service.ts
src/pages/empty/: index.tsx  style.module.scss
src/pages/empty/assets/: b1.svg.tsx  icon.svg.tsx
src/pages/main/: index.tsx  style.module.scss
src/pages/main/assets/: b2.svg.tsx  b3.svg.tsx  bg-image.svg.tsx  bg-l3.svg.tsx  download.svg.tsx
src/pages/settings/: index.tsx  style.module.scss
src/pages/settings/assets/: back.svg.tsx  checkbox.svg.tsx  landscape.svg.tsx
src/widgets/: Router.tsx  SizeBox.tsx  Typography.tsx  typography.module.scss
