[package]
name = "kute-clip"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.9", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2.0.0-beta.2"
tauri-plugin-single-instance = { version = "2.0.0-beta.2" }
tauri-plugin-global-shortcut = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"
directories = "5.0.1"
kute-clip-core = { path = "../src-core" }
misty-vm = { version = "0.1.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
global-hotkey = "0.2.2"
tracing = "0.1"
tracing-subscriber = "0.3"
clipboard-master = "3.1.3"
arboard = "3.2.0"
enigo = "0.1.2"


[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"
core-graphics-types = "0.1.2"
core-foundation = { version = "0.9.3", features = ["mac_os_10_8_features"] }
core-graphics = "0.23.1"
cocoa = "0.25.0"
